[package]
name = "avarts"
version = "0.1.0"
authors = ["Daniel Melody <dmwalter12@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.3", features = ["blocking", "json"] }
structopt = "0.3.21"
tokio = { version = "1.5.0", features = ["full"] }
